[gd_scene load_steps=16 format=3 uid="uid://c3e4gi60uc1dt"]

[ext_resource type="Script" path="res://scenes/levels/ally.gd" id="1_oa16n"]
[ext_resource type="Texture2D" uid="uid://dpm435tu1fxhv" path="res://graphics/spider_runs.png" id="2_4dfwh"]
[ext_resource type="Texture2D" uid="uid://cii4pl7iok7q" path="res://graphics/shadow.png" id="2_drwti"]
[ext_resource type="Texture2D" uid="uid://c0isy3alqujoy" path="res://graphics/masha.png" id="4_wjx7u"]
[ext_resource type="Texture2D" uid="uid://cs132xijsg1jc" path="res://graphics/masha_shoot.png" id="5_23c0s"]
[ext_resource type="AudioStream" uid="uid://db712cgtyjwqx" path="res://audio/laser.mp3" id="6_d3plk"]
[ext_resource type="Script" path="res://scenes/levels/RayCast2D.gd" id="6_n4uio"]
[ext_resource type="AudioStream" uid="uid://dq8enn8bphofm" path="res://audio/laser_start.mp3" id="7_ynice"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ioxix"]
bg_color = Color(0, 1, 0.756863, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gdpyt"]
radius = 14.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5380d"]
radius = 138.0

[sub_resource type="Animation" id="Animation_02l00"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4dfwh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Legs:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Legs:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Legs:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qavsu"]
resource_name = "idle"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Legs:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4dfwh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Legs:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Legs:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Legs:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k16dx"]
resource_name = "run"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Legs:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Legs:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Legs:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Legs:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4dfwh")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_euvoy"]
_data = {
"RESET": SubResource("Animation_02l00"),
"idle": SubResource("Animation_qavsu"),
"run": SubResource("Animation_k16dx")
}

[node name="Ally" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_oa16n")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = 13.0
offset_top = -21.0
offset_right = 17.0
offset_bottom = 6.0
rotation = 1.5708
theme_override_styles/fill = SubResource("StyleBoxFlat_ioxix")
fill_mode = 3
show_percentage = false

[node name="Legs" type="Sprite2D" parent="."]
position = Vector2(2, 10)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_4dfwh")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_gdpyt")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(-3.8147e-06, 16)
scale = Vector2(0.3, 0.376923)
texture = ExtResource("2_drwti")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-1.19209e-07, -2.38419e-07)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_wjx7u")

[node name="Sprite2D_shoot" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(-1.19209e-07, -2.38419e-07)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_23c0s")

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D_shoot"]
position = Vector2(7.15107e-07, 1.5008e-06)
scale = Vector2(5.99876, 6.29481)
target_position = Vector2(136, 0)
script = ExtResource("6_n4uio")

[node name="Line2D" type="Line2D" parent="Sprite2D_shoot/RayCast2D"]
visible = false
position = Vector2(-1.19209e-07, -2.38419e-07)
scale = Vector2(0.166701, 0.158861)
points = PackedVector2Array(7.15107e-07, 1.5008e-06, 641.868, 1.5008e-06)
width = 12.0
default_color = Color(0, 0.705882, 0.760784, 1)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5380d")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayerLegs" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_euvoy")
}

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_d3plk")
volume_db = -26.894

[node name="LaserStartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ynice")
volume_db = -16.475

[node name="MultiTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="target_found" from="." to="." method="_on_target_found"]
[connection signal="target_lost" from="." to="." method="_on_target_lost"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="finished" from="LaserSound" to="." method="_on_laser_sound_finished"]
[connection signal="timeout" from="MultiTimer" to="." method="_on_multiplier_timeout"]
